--- a/PESystem/Areas/SmartFA/Views/Analysis/Index.cshtml
+++ b/PESystem/Areas/SmartFA/Views/Analysis/Index.cshtml
@@ -100,6 +100,33 @@
         <canvas id="handoverStatusChart" style="max-height: 400px;"></canvas>
     </div>
 
+    <!-- Modal hiển thị SerialNumber theo Location -->
+    <div class="modal fade" id="locationDetailModal" tabindex="-1">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Danh sách SerialNumber</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <table class="table table-bordered" id="locationDetailTable">
+                        <thead>
+                            <tr>
+                                <th>SerialNumber</th>
+                                <th>TestCode</th>
+                                <th>ErrorDesc</th>
+                                <th>MO Number</th>
+                                <th>ModelName</th>
+                                <th>Aging(Days)</th>
+                            </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Modal Thêm Guide -->
     <div class="modal fade" id="guideModal" tabindex="-1">
         <div class="modal-dialog modal-lg">
