--- a/PESystem/Areas/SmartFA/Views/Analysis/Index.cshtml
+++ b/PESystem/Areas/SmartFA/Views/Analysis/Index.cshtml
@@ -94,10 +94,10 @@
     </div>
 
     <div class="chart-container" style="width: 80%; margin: auto; padding: 20px;">
-        <canvas id="locationChart" style="max-height: 400px;"></canvas>
+        <div id="locationChart" style="max-height: 400px;"></div>
     </div>
     <div class="chart-container" style="width: 80%; margin: auto; padding: 20px;">
-        <canvas id="handoverStatusChart" style="max-height: 400px;"></canvas>
+        <div id="handoverStatusChart" style="max-height: 400px;"></div>
     </div>
 
     <!-- Modal hiển thị SerialNumber theo Location -->
@@ -126,6 +126,7 @@
             </div>
         </div>
     </div>
+
 
     <!-- Modal Thêm Guide -->
     <div class="modal fade" id="guideModal" tabindex="-1">
@@ -472,8 +473,7 @@
 
 @section Scripts {
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="~/assets/vendor/chart.js/chart.umd.js"></script>
-    <script src="~/assets/vendor/chart.js/chartjs-plugin-datalabels.js"></script>
+    <script src="~/assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="~/assets/areas/smartfa/js/analysis.js?v=@DateTime.Now.Ticks"></script>
     <style>
         body {
