Fix SN table layout and freeze column

--- a/PESystem/Areas/SmartFA/Views/Shared/_Layout_SmartFA.cshtml
+++ b/PESystem/Areas/SmartFA/Views/Shared/_Layout_SmartFA.cshtml
@@ -8,8 +8,8 @@
     <link rel="icon" href="~/assets/img/smartFA.png" type="image/png">
     <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/lib/datatable/jquery.datatables.min.css" rel="stylesheet" />
-    <link href="~/lib/datatable/fixedcolumns.datatables.min.css" rel="stylesheet" />
+    <link href="~/lib/datatable/jquery.dataTables.min.css" rel="stylesheet" />
+    <link href="~/lib/datatable/fixedColumns.dataTables.min.css" rel="stylesheet" />
     <link href="~/lib/all-fa-icon/css/all.min.css" rel="stylesheet" />
     <link href="~/assets/areas/smartfa/css/importfa.css?v=@DateTime.Now.Ticks" rel="stylesheet" />
     <script src="~/lib/gsap-particles/particles.min.js"></script>
@@ -141,9 +141,9 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/site.js?v=@DateTime.Now.Ticks"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="~/lib/datatable/jquery.datatables.min.js"></script>
+    <script src="~/lib/datatable/jquery.dataTables.min.js"></script>
     <script src="~/lib/datatable/simple-datatables.js"></script>
-    <script src="~/lib/datatable/datatables.fixedcolumns.min.js"></script>
+    <script src="~/lib/datatable/dataTables.fixedColumns.min.js"></script>
     <script src="~/lib/sweetalert2/dist/sweetalert2.all.js"></script>
     <script src="~/lib/select2/dist/js/select2.full.min.js"></script>
     <script src="~/lib/excel/xlsx.full.min.js"></script>
