--- a/PESystem/Areas/SmartFA/Views/Analysis/Index.cshtml
+++ b/PESystem/Areas/SmartFA/Views/Analysis/Index.cshtml
@@ -7,24 +7,23 @@
 @using Microsoft.AspNetCore.Http
 @inject IHttpContextAccessor HttpContextAccessor
 <section>
-    <div class="container">
-        <div class="row align-items-start g-2">
-            <!-- Ô nhập -->
-            <div class="col-md-4">
-                <form id="sn-form">
-                    <div class="input-group d-flex align-items-start gap-2">
-                        <textarea id="serialNumberList" class="form-control" rows="3" placeholder="Input SERIAL NUMBER..." required></textarea>
-                        <button type="submit" id="searchButton" class="btn btn-ne">SEARCH</button>
-                    </div>
-                </form>
-            </div>
-            <!-- Upload File -->
-            <div class="col-auto ms-auto text-end">
-                <button type="button" id="addGuideButton" class="btn btn-ne w-100">Add Guide</button>
-            </div>
+    <div class="row">
+        <!-- Ô nhập -->
+        <div class="col-md-4">
+            <form id="sn-form">
+                <div class="input-group d-flex align-items-start gap-2">
+                    <textarea id="serialNumberList" class="form-control" rows="3" placeholder="Input SERIAL NUMBER..." required></textarea>
+                    <button type="submit" id="searchButton" class="btn btn-ne">SEARCH</button>
+                </div>
+            </form>
         </div>
-        <div class="d-flex flex-wrap justify-content-between align-items-center gap-2">
-            <div class="btn-action-group btn-group mt-1">
+        <!-- Upload File -->
+        <div class="col-auto ms-auto text-end">
+            <button type="button" id="addGuideButton" class="btn btn-ne w-100">Add Guide</button>
+        </div>
+    </div>
+    <div class="d-flex flex-wrap justify-content-between align-items-center gap-2">
+        <div class="btn-action-group btn-group mt-1">
             @{
                 var allowedAreas = HttpContextAccessor.HttpContext.User.Claims
                 .FirstOrDefault(c => c.Type == "AllowedAreas")?.Value.Split(',');
@@ -57,11 +56,7 @@
             }
             <button id="btn-handover" class="btn btn-outline-danger">Giao</button>
             <button id="btn-receive" class="btn btn-outline-success">Nhận</button>
-
         </div>
-</div>
-        
-        <!-- Bảng hiển thị danh sách SN -->
     </div>
     <div id="sn-table-wrapper" class="mt-2 datatable-wrapper d-none">
         <table id="sn-table" class="table table-bordered datatable-table">
