--- a/PESystem/Areas/SmartFA/Views/Handover/Index.cshtml
+++ b/PESystem/Areas/SmartFA/Views/Handover/Index.cshtml
@@ -19,6 +19,7 @@
         <div class="action-buttons mt-3">
             <button id="GiaoBan" class="btn btn-ne btn-fa-all">GIAO BẢN</button>
             <button id="NhanBan" class="btn btn-ne btn-arc-all">NHẬN BẢN</button>
+            <button id="refreshButton" class="btn btn-ne">REFRESH</button>
         </div>
         <!-- Bảng hiển thị danh sách SN -->
     </div>
