--- a/PESystem/Areas/SmartFA/Views/Analysis/Index.cshtml
+++ b/PESystem/Areas/SmartFA/Views/Analysis/Index.cshtml
@@ -124,8 +124,47 @@
                 </div>
             </div>
         </div>
-    </div>
+</div>
 
+
+    <div class="modal fade" id="statusModal" tabindex="-1" aria-labelledby="statusModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-lg-custom">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="statusModalLabel">Danh Sách Serial Numbers</h5>
+                    <button type="button" class="btn-ne btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <table id="modal-sn-table" class="table table-bordered datatable-table table-striped">
+                        <thead>
+                            <tr>
+                                <th>SERIAL_NUMBER</th>
+                                <th>MODEL_NAME</th>
+                                <th>TEST_GROUP</th>
+                                <th>TEST_CODE</th>
+                                <th>ERROR_DESC</th>
+                                <th>PRE_STATUS</th>
+                                <th>STATUS</th>
+                                <th>OWNER</th>
+                                <th>TIME</th>
+                                <th>HANDOVER</th>
+                                <th>LOCATION</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- Dữ liệu sẽ được chèn tại đây -->
+                        </tbody>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-ne">
+                        <img id="exportExcelBtn" src="~/assets/img/excel.png" alt="Excel Icon" class="flex-fill" style="width:24px; height:24px;">
+                    </button>
+                    <button type="button" class="btn btn-ne" data-bs-dismiss="modal">Đóng</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Modal Thêm Guide -->
     <div class="modal fade" id="guideModal" tabindex="-1">
@@ -475,6 +514,16 @@
     <script src="~/assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="~/assets/areas/smartfa/js/analysis.js?v=@DateTime.Now.Ticks"></script>
     <style>
+        .modal-lg-custom {
+            max-width: 90%;
+        }
+
+        .modal-body {
+            overflow-x: auto;
+            overflow-y: auto;
+            max-height: 80vh;
+        }
+
         body {
             background-color: #f8f9fa;
         }
