Add Excel export for chart modals

--- a/PESystem/Areas/SmartFA/Views/Analysis/Index.cshtml
+++ b/PESystem/Areas/SmartFA/Views/Analysis/Index.cshtml
@@ -122,6 +122,12 @@
                         <tbody></tbody>
                     </table>
                 </div>
+                <div class="modal-footer">
+                    <button class="btn btn-ne">
+                        <img id="exportLocationExcelBtn" src="~/assets/img/excel.png" alt="Excel Icon" class="flex-fill" style="width:24px; height:24px;">
+                    </button>
+                    <button type="button" class="btn btn-ne" data-bs-dismiss="modal">Đóng</button>
+                </div>
             </div>
         </div>
 </div>
